--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,6 @@
 server.port = 8081
 server.servlet.context-path = /app
+
+value.name = daniel
+value.surname = montes
+value.random = ${random.value}
